uber clone update

--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
     <div class="container2">
       <div class="item2">
         <span class="boot-icon"><i class="bi bi-people"></i></span>
-        <h1>About us</h1>
+        <h1 class="cont-head">About us</h1>
         <p class="desc">Find out how we started, what drives us, and how we’re reimagining how the world moves.</p>
         <span class="sub-text">Learn more about Uber</span>
       </div>
       <div class="item2">
         <span class="boot-icon"><i class="bi bi-newspaper"></i></span>
-        <h1>Newsroom</h1>
+        <h1 class="cont-head">Newsroom</h1>
         <p class="desc">See announcements about our latest releases, initiatives, and partnerships.</p>
         <span class="sub-text">Go to Newsroom</span>
       </div>
       <div class="item2">
         <span class="boot-icon"><i class="bi bi-house-door"></i></span>
-        <h1>Global citizenship</h1>
+        <h1 class="cont-head">Global citizenship</h1>
         <p class="desc">Read about our commitment to making a positive impact in the cities we serve.</p>
         <span class="sub-text">See our partnerships</span>
       </div>
@@ -185,6 +185,43 @@
           </ul>
         </div>
       </div>
+    <div class="container-icon">
+      <div class="item9">
+       <ul class="icon-footer">
+        <li><i class="bi bi-facebook"></i></li>
+        <li><i class="bi bi-twitter"></i></li>
+        <li><i class="bi bi-youtube"></i></li>
+        <li><i class="bi bi-linkedin"></i></li>
+        <li><i class="bi bi-instagram"></i></li>
+
+       </ul>
+      </div>
+      <div class="item8">
+        <ul class="lang-footer">
+          <li> <i class="bi bi-globe"></i> <span>English</span></li>
+          <li> <i class="bi bi-geo-alt-fill"></i><span>San Francisco Bay Area</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-botom">
+<button class="foot-btn"><i class="bi bi-google-play"></i> Google Play</button>
+<button class="foot-btn"><i class="bi bi-apple"></i> App store</button>
+    </div>
+    <div class="container-icon bottom">
+      <div class="item9">
+       <span class="copy-write">© 2023 Uber Technologies Inc.</span>
+      </div>
+      <div class="item8">
+      <ul class="Privacy">
+        <li>Privacy</li>
+        
+        <li>Accessibility</li>
+        
+        <li>Terms</li>
+      </ul>
+      </div>
+    </div>
+
     </div>
 
   </main>
